feature: google_analytics add

--- a/_config.yml
+++ b/_config.yml
@@ -148,7 +148,7 @@ assets:
       - "last 2 versions"
       - "IE > 9"
 
-google_analytics: "UA_123456789_1"
+google_analytics: "G-S2FSXWZM7N"
 
 # Disqus Comments
 disqus:
